--- a/src/styles/loginStyles.scss
+++ b/src/styles/loginStyles.scss
@@ -29,7 +29,7 @@
         .basicInput {
             width: 240px;
             padding: 12px 18px;
-            font-size: 14px;
+            font-size: 16px;
 
             @media screen and (max-width: 680px) {
                 width: 90vw;
